[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arena-rank"
version = "0.0.1"
description = "Ranking methodology powering the LMArena leaderboard."
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Clayton Thorrez", email = "clayton@lmarena.ai"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://lmarena.ai"
Repository = "https://github.com/lmarena/arena-ai"
Issues = "https://github.com/lmarena/arena-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["arena"]